--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html ng-app>
 <head>
-    <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script src="controllers.js"></script>
 </head>
 <body>
+<div>
+    <label>Name:</label>
+    <input type="text" ng-model="yourName" placeholder="Enter a name here">
+    <hr>
+    <h1>Hello {{yourName}}!</h1>
 
+
+    <div ng-controller="Controller1">
+        <form novalidate class="simple-form">
+            Name: <input type="text" ng-model="user.name" /><br />
+            E-mail: <input type="email" ng-model="user.email" /><br />
+            Gender: <input type="radio" ng-model="user.gender" value="male" />male
+            <input type="radio" ng-model="user.gender" value="female" />female<br />
+            <button ng-click="reset()">RESET</button>
+            <button ng-click="update(user)">SAVE</button>
+        </form>
+        <pre>form = {{user | json}}</pre>
+        <pre>master = {{master | json}}</pre>
+    </div>
+
+</div>
 </body>
 </html>
