--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       .sidebar-nav {
         padding: 9px 0;
       }
-
       @media (max-width: 980px) {
         /* Enable use of floated navbar text */
         .navbar-text.pull-right {
@@ -21,35 +20,30 @@
       }
     </style>
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-	
+
     <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
 	<script type="text/javascript" src="angular-ui-router.js"></script>
     <script type="text/javascript" src="mongolab.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
 	<script type="text/javascript" src="moment.js"></script>
+	<title ng-bind="$state.current.name + ' - ui-router'">ui-router</title>
 </head>
 <body>
-<div class="container-fluid" ng-controller="Controller1">
+<pre>
+  $state = {{$state.current.name}}
+  $stateParams = {{$stateParams}}
+</pre>
+<div class="container-fluid" >
 <div class="row-fluid">
 	<div class="span3">
 	  <div class="well sidebar-nav">
 		<div ui-view="viewSideBar"></div>
-		<ul class="nav nav-list">
-		  <li class="nav-header">Progetti</li>
-		  <li>ProjectId: <input ng-model="projectId"></li>
-		  
-		  <li ng-repeat="prj in projects | filter:query">
-			       <a href="#/projects/{{prj._id.$oid}}"><p>{{prj.name | uppercase}}</a>
-				   <small>{{prj.name}}{{prj.cognome}}</small>
-          </li>
-		</ul>
 	  </div><!--/.well -->
 	</div><!--/span-->
-		<div class="span9">
+	<div class="span9">
 		<a class="btn  btn-primary" href="index.html">Home</a>
 		<a class="btn  btn-primary" href="#/projects/Add">New</a>
 		<hr>
