--- a/index.html
+++ b/index.html
@@ -3,33 +3,20 @@
 <head>
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 	<style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
-      @media (max-width: 980px) {
-        /* Enable use of floated navbar text */
-        .navbar-text.pull-right {
-          float: none;
-          padding-left: 5px;
-          padding-right: 5px;
-        }
-      }
+      body { padding-top: 60px; padding-bottom: 40px; }
+      .sidebar-nav { padding: 9px 0; }
+      @media (max-width: 980px) { /* Enable use of floated navbar text */  .navbar-text.pull-right {
+          float: none;padding-left: 5px; padding-right: 5px; }  }
     </style>
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-
     <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
 	<script type="text/javascript" src="angular-ui-router.js"></script>
-    <script type="text/javascript" src="mongolab.js"></script>
+    <script type="text/javascript" src="mongolabResourceHttp.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
 	<script type="text/javascript" src="moment.js"></script>
-	<title ng-bind="$state.current.name + ' - ui-router'">ui-router</title>
 </head>
 <body>
 <pre>
@@ -46,16 +33,13 @@
 	<div class="span9">
 		<a class="btn  btn-primary" href="index.html">Home</a>
 		<a class="btn  btn-primary" href="#/projects/Add">New</a>
+		<a class="btn  btn-primary" href="#/route3">Route 3</a>
 		<hr>
 			<div ui-view="viewA">viewA</div>
 			<div ui-view="viewB">viewB</div>
-			<a href="#/route1">Route 1</a>
-			<a href="#/route2">Route 2</a>
-			<a href="#/route3">Route 3</a>
 		<hr>
-		<pre>Hello {{yourName}}!</pre>
-	    <div ng-view></div>
-		
+		<div ng-view></div>
+		<input  ng-model="_MARIO2_"  ><p>[{{_MARIO2_}}]</p>
 	</div>
 	
 	<!-- output template -->
