--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html ng-app="app">
 <head>
+	
+	<link href="styles/kendo.common.min.css" rel="stylesheet">
+    <link href="styles/kendo.bootstrap.min.css" rel="stylesheet">
+
+
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 	<style type="text/css">
       body { padding-top: 60px; padding-bottom: 40px; }
@@ -8,12 +13,16 @@
       @media (max-width: 980px) { /* Enable use of floated navbar text */  .navbar-text.pull-right {
           float: none;padding-left: 5px; padding-right: 5px; }  }
     </style>
+	
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+	<script type="text/javascript" src="underscore.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
 	<script type="text/javascript" src="angular-ui-router.js"></script>
+	<script type="text/javascript" src="js/kendo.web.min.js"></script>
+	<script type="text/javascript" src="angular-kendo.js"></script>
     <script type="text/javascript" src="mongolabResourceHttp.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
 	<script type="text/javascript" src="moment.js"></script>
