--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 <html ng-app="app">
 <head>
 	
-	<link href="styles/kendo.common.min.css" rel="stylesheet">
-    <link href="styles/kendo.bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="ng-grid.css" />
 
 
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 	<style type="text/css">
-      body { padding-top: 60px; padding-bottom: 40px; }
-      .sidebar-nav { padding: 9px 0; }
-      @media (max-width: 980px) { /* Enable use of floated navbar text */  .navbar-text.pull-right {
-          float: none;padding-left: 5px; padding-right: 5px; }  }
+		body { padding-top: 60px; padding-bottom: 40px; }
+		.sidebar-nav { padding: 9px 0; }
+			@media (max-width: 980px) { /* Enable use of floated navbar text */  .navbar-text.pull-right {
+			float: none;padding-left: 5px; padding-right: 5px; }  }
+		.gridStyle {     border: 1px solid rgb(212,212,212);    width: 400px;     height: 300px }
     </style>
 	
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-	<script type="text/javascript" src="underscore.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
 	<script type="text/javascript" src="angular-ui-router.js"></script>
-	<script type="text/javascript" src="js/kendo.web.min.js"></script>
-	<script type="text/javascript" src="angular-kendo.js"></script>
+	<script type="text/javascript" src="ng-grid-2.0.5.min.js"></script>
     <script type="text/javascript" src="mongolabResourceHttp.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
 	<script type="text/javascript" src="moment.js"></script>
