--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<a class="btn  btn-primary" href="index.html">Home</a>
 		<a class="btn  btn-primary" href="#/projects/Add">New</a>
 		<a class="btn  btn-primary" href="#/route3">Route 3</a>
+		<a class="btn  btn-primary" href="#/SoundCloud">SoundCloud</a>
 		<hr>
 			<div ui-view="viewA">viewA</div>
 			<div ui-view="viewB">viewB</div>
