--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 	
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
-	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+	<!-- type="text/javascript" src="bootstrap/js/bootstrap.js"></script> -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
+	<script type="text/javascript" src="ui-bootstrap-0.3.0.js"></script>
 	<script type="text/javascript" src="angular-ui-router.js"></script>
 	<script type="text/javascript" src="ng-grid-2.0.5.min.js"></script>
     <script type="text/javascript" src="mongolabResourceHttp.js"></script>
@@ -49,8 +50,6 @@
 		<div ng-view></div>
 		<input  ng-model="_MARIO2_"  ><p>[{{_MARIO2_}}]</p>
 	</div>
-	
-	<!-- output template -->
 
 	
 </div>
