--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     </style>
 	
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
-	<!-- type="text/javascript" src="bootstrap/js/bootstrap.js"></script> -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
-	<script type="text/javascript" src="ui-bootstrap-0.3.0.js"></script>
+	
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
+    <script src="http://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
+
+    <!-- script type="text/javascript" src="http://code.jquery.com/jquery.js"></script -->
+    <!-- script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script -->
+    <!-- script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script -->
+	<!-- script type="text/javascript" src="ui-bootstrap-tpls-0.3.0.js"></script -->
 	<script type="text/javascript" src="angular-ui-router.js"></script>
-	<script type="text/javascript" src="ng-grid-2.0.5.min.js"></script>
-    <script type="text/javascript" src="mongolabResourceHttp.js"></script>
+
+	<script type="text/javascript" src="mongolabResourceHttp.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
 	<script type="text/javascript" src="moment.js"></script>
 </head>
